--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,5 @@
 ---
 applications:
- - name: GetStartedNode
-   random-route: true
+ - name: EmergencyPrepService
+   host: emergency-prep-service
    memory: 256M
